--- a/Type/Seq.pod
+++ b/Type/Seq.pod
@@ -34,7 +34,7 @@ for lines { .say }; # dies with "This Seq has already been iterated [...]"
 
 A high-level construct to generate a C<Seq> is C<gather/take>, as well as many
 built-in methods like C<map> and C<grep>, low-level constructors to create a
-Seq from an iterator or from looping constrcuts are available too.
+Seq from an iterator or from looping constructs are available too.
 
 =head1 Methods
 
@@ -65,7 +65,7 @@ L<X::Seq::Consumed>.
 
     method eager(Seq:D:) returns Bool:D
 
-Returns an eagerly evalauted L<List|/type/List> based on the invocant
+Returns an eagerly evaluated L<List|/type/List> based on the invocant
 sequence, and marks it as consumed.
 If called on an already consumed sequence, throws an error of type
 L<X::Seq::Consumed>.
@@ -76,7 +76,7 @@ L<X::Seq::Consumed>.
     proto method from-loop(|) returns Seq:D
     multi method from-loop(&body)
     multi method from-loop(&body, &cond, :$repeat)
-    multi method from-loop(&body, &cond, &afteward)
+    multi method from-loop(&body, &cond, &afterward)
 
 Creates a new C<Seq> based callbacks.
 
