--- a/Type/X/Sequence/Deduction.pod
+++ b/Type/X/Sequence/Deduction.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::Sequence::Deduction
 
-=SUBTITLE Error due to constructing a sequence from uneligible input
+=SUBTITLE Error due to constructing a sequence from ineligible input
 
     class X::Sequence::Deduction is Exception { }
 
