Fixed broken link

--- a/Type/Seq.pod
+++ b/Type/Seq.pod
@@ -12,7 +12,7 @@ calling .cache on a Seq will return a List that is still lazy, but stores the
 generated values for later access. The same is true when assigning a Seq to an
 array.
 
-A typical use case is L<method C<lines> in C<IO::Handles>|/type/IO::Handles#method lines>,
+A typical use case is L<method C<lines> in C<IO::Handle>|/type/IO::Handle#method_lines>,
 which could use quite much memory if it stored all the lines read from the
 file. So
 
