--- a/Type/Seq.pod
+++ b/Type/Seq.pod
@@ -26,10 +26,12 @@ This implies that you cannot iterate the same C<Seq> object twice (otherwise
 it couldn't throw away old values), so this dies:
 
 =begin code :allow<L>
-my \lines := open('README').lines;
-for lines { .say };
-for lines { .say }; # dies with "This Seq has already been iterated [...]"
-                    # of type L<X::Seq::Consumed>
+my @a = 1,2,3;
+my @b = <a b c>;
+my \c = @a Z=> @b;
+.say for c;
+.say for c; # dies with "This Seq has already been iterated, and its values consumed [...]"
+            # of type L<X::Seq::Consumed>
 =end code
 
 A high-level construct to generate a C<Seq> is C<gather/take>, as well as many
